--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,9 @@
     "require": {
         "php": ">=5.5.9",
         "laravel/framework": "5.1.*",
-        "fzaninotto/faker": "^1.6",
-        "laravelcollective/html": "5.1.*"
+        "fzaninotto/faker": "1.5",
+        "laravelcollective/html": "5.1.*",
+        "styde/seeder": "^1.0"
     },
     "require-dev": {
         "mockery/mockery": "0.9.*",
